chore: Add backups and archives to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,9 @@ coverage/
 # Stack files with secrets
 restaurante-stack-final.yml
 restaurante-stack.yaml
+
+# Backups
+backups/
+*.tar.gz
+*.tar
+*.zip
